Code optimizations
- removed usage of deprecated `Long(int)` constructor in `DatabaseConnector.java` and `YAMLConnector.java`
- fixed resource leak in `Client.java` (MoTD module)